fix overflow text outside main [quote l:1378]

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ body {
 }
 .main-content {
 	width: 100%;
-	height: 300px;
+	height: auto;
 	padding: 50px 40px;
 	background-color: hsl(208, 18%, 12%);
 	border-radius: 15px;
